re added overflow fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,18 +7,18 @@
   overflow-x: hidden;
 }
 
-// ::-webkit-scrollbar {
-//   width: 0.4em;
-// }
+::-webkit-scrollbar {
+  width: 0.4em;
+}
 
-// ::-webkit-scrollbar-track {
-//   background: none;
-// }
+::-webkit-scrollbar-track {
+  background: none;
+}
 
-// ::-webkit-scrollbar-thumb {
-//   background: #212839;
-//   border-radius: 100vw;
-// }
+::-webkit-scrollbar-thumb {
+  background: #212839;
+  border-radius: 100vw;
+}
 
 body {
   min-height: 100vh;
@@ -176,7 +176,7 @@ nav {
     position: fixed;
     inset: 0 0 0 30%;
     padding-top: 10em;
-    background-color: $quarternary-color;
+    background-color: hsl(222, 33%, 25%);
     transform: translateX(100%);
     transition: transform 0.4s ease-in;
   }
